SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Ocean_RDS_Backup_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AWS_Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AWS Accounts</label>
        <referenceTo>AWS_Accounts__c</referenceTo>
        <relationshipLabel>Ocean RDS Backup Requests</relationshipLabel>
        <relationshipName>Ocean_RDS_Backup_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_AWS_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Backup_Storage_GB_Per_Month__c</fullName>
        <label>Additional Backup Storage GB Per Month)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Backup_Storage_Type__c</fullName>
        <label>Backup Storage Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Backup</fullName>
                </value>
                <value>
                    <fullName>Aurora MySQL</fullName>
                </value>
                <value>
                    <fullName>Aurora PostgreSQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculated_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Environment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Cost__c</fullName>
        <label>Estimated Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Requested__c</fullName>
        <label>Number of Months Requested</label>
        <precision>3</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_RDS_Backup_Request_ID__c</fullName>
        <displayFormat>OCEAN-RDS-BKUP-{00000}</displayFormat>
        <label>Ocean RDS Backup Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ocean Request</label>
        <referenceTo>Ocean_Request__c</referenceTo>
        <relationshipLabel>Ocean RDS Backup Requests</relationshipLabel>
        <relationshipName>Ocean_RDS_Backup_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Request_ID__c</fullName>
        <displayFormat>RDSB-{00000}</displayFormat>
        <label>Resource Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Resource_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Estimated_Cost__c</fullName>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Ocean RDS Backup Request</label>
    <nameField>
        <label>Ocean RDS Backup Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ocean RDS Backup Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>